--- a/UFA/vectorization.ipynb
+++ b/UFA/vectorization.ipynb
@@ -16,11 +16,11 @@
     "import pandas as pd\n",
     "import datetime\n",
     "import numpy as np\n",
-    "#import spacy\n",
+    "import spacy\n",
     "\n",
     "df = pd.read_csv(\"colocates.csv\", parse_dates= ['date'])\n",
-    "#nlp = spacy.load('pl_core_news_sm')\n",
-    "#df.colocate = df.colocate.apply(lambda colocate: \" \".join([token.lemma_ for token in nlp(colocate)]) )\n",
+    "nlp = spacy.load('pl_core_news_sm')\n",
+    "df.colocate = df.colocate.apply(lambda colocate: \" \".join([token.lemma_ for token in nlp(colocate)]) )\n",
     "df['words'] = df.colocate.str.split(\" \")\n",
     "df_exploded = df.explode('words')\n",
     "df_exploded.drop('colocate', inplace=True, axis=1)"
